Fixed small spacing between menu items.

--- a/style.less
+++ b/style.less
@@ -739,6 +739,7 @@ body.responsive {
 		margin: 0;
 		padding-left: 0;
 		.clearfix();
+		font-size: 0;
 
 		li {
 			display: inline-block;
